--- a/src/index.scss
+++ b/src/index.scss
@@ -42,21 +42,33 @@ h1 {
 }
 
 .wrapper {
-  box-sizing: border-box;
-  background: #E6E9F2;
   min-height: 100%;
+  overflow: hidden;
+
 }
 
 ._container {
-  width: 1400px;
+  box-sizing: border-box;
   padding: 26px 0;
-  margin: 0 auto;
+
 }
 
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.button_1 {
+  @media(max-width:1234px) {
+    display: none;
+  }
+}
 
 // main page
 
 .main {
+  &__container {}
 
   &__block {
     display: flex;
@@ -68,21 +80,79 @@ h1 {
     background: #FFFFFF;
     box-shadow: 2px 1px 7px rgba(0, 0, 0, 0.08), 0px 2px 1px -1px rgba(0, 0, 0, 0.04), 0px 1px 3px rgba(0, 0, 0, 0.12);
     border-radius: 8px;
+
+    @media(max-width:1420px) {
+      margin: 10px 20px;
+      width: 1200px;
+    }
+
+    @media(max-width:1350px) {
+      margin: 10px 20px;
+      width: 1000px;
+    }
+
+    @media(max-width:1030px) {
+      margin: 10px 20px;
+      height: auto;
+      width: 800px;
+    }
+
+    @media(max-width:660px) {
+      padding: 15px 16px;
+    }
+
+    @media(max-width:480px) {
+      width: 400px;
+      height: auto;
+    }
+
   }
 
   &__cloumn {
     display: flex;
+
+    @media(max-width:1030px) {
+      margin: 14px 0 0 0;
+    }
+
+
   }
 
   &__title {
+    display: inline-block;
     font-weight: 700;
     font-size: 20px;
     line-height: 25px;
+    max-width: 712px;
     cursor: pointer;
     letter-spacing: -0.625px;
-
-
     color: #3A4562;
+
+    @media(max-width:1420px) {
+      max-width: 612px;
+    }
+
+    @media(max-width:1230px) {
+      max-width: 512px;
+      font-size: 18px;
+    }
+
+    @media(max-width:1030px) {
+      max-width: 512px;
+      font-size: 15px;
+    }
+
+    @media(max-width:660px) {
+      width: 300px;
+      font-size: 14px;
+    }
+
+    @media(max-width:425px) {
+      width: 200px;
+      font-size: 13px;
+      margin: 0 0 0 8px;
+
+    }
   }
 
   &__name {
@@ -92,6 +162,17 @@ h1 {
     line-height: 25px;
     letter-spacing: 0.23619px;
     color: #878D9D;
+
+    @media(max-width:830px) {
+      font-size: 13px;
+      margin: 2px 0;
+    }
+
+    @media(max-width:425px) {
+      font-size: 12px;
+      margin: 0 0 0 8px;
+
+    }
   }
 
   &__block-location {
@@ -107,6 +188,20 @@ h1 {
     letter-spacing: 0.23619px;
     color: #878D9D;
     cursor: pointer;
+
+    @media(max-width:830px) {
+      font-size: 13px;
+    }
+
+    @media(max-width:425px) {
+      font-size: 12px;
+      margin: 0 0 0 8px;
+    }
+
+    @media(max-width:325px) {
+      font-size: 12px;
+
+    }
   }
 
   &__avatar {
@@ -114,9 +209,28 @@ h1 {
     width: 85px;
     border-radius: 50%;
     margin: 0 26px 0 0;
+
+    @media(max-width:1030px) {
+      margin: 0 8px 0 0;
+      height: 65px;
+      width: 65px;
+    }
+
+    @media(max-width:425px) {
+      margin: 0 8px 0 0;
+      height: 50px;
+      width: 50px;
+    }
+
+    @media(max-width:375px) {
+      margin: 0 0 0 0;
+      height: 40px;
+      width: 40px;
+    }
   }
 
   &__block-end {
+    position: relative;
     display: flex;
     align-items: center;
   }
@@ -133,6 +247,28 @@ h1 {
     width: 96px;
     height: 18px;
     margin: 0 32px 0 0;
+
+    @media(max-width:1030px) {
+      position: absolute;
+    }
+  }
+
+  &__posted {
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: right;
+    letter-spacing: 0.206667px;
+    color: #878D9D;
+
+    @media(max-width:1030px) {
+      position: absolute;
+      width: 100px;
+      top: 0px;
+      right: 0px;
+      font-size: 12px;
+      margin: 0 0 14px 0;
+    }
   }
 
   &__save {
@@ -140,9 +276,12 @@ h1 {
     margin-left: 114px;
     width: 16px;
     height: 18px;
+
+    @media(max-width:1030px) {
+      display: none;
+    }
   }
 
-  &__until {}
 
   &__numbers {
     width: 515px;
@@ -162,6 +301,13 @@ h1 {
     display: flex;
     justify-content: center;
     column-gap: 100px;
+
+    @media(max-width:1234px) {
+      align-items: center;
+      flex-direction: column;
+      row-gap: 100px;
+    }
+
   }
 
   &__left-block {
@@ -172,6 +318,7 @@ h1 {
     display: flex;
     border-bottom: 1px #3a45626e solid;
     justify-content: space-between;
+
   }
 
   &__header-right {
@@ -194,6 +341,7 @@ h1 {
     letter-spacing: -0.5625px;
     color: #3A4562;
     font-stretch: 100;
+
     img {
       margin: 0 15px 0 0;
     }
@@ -228,8 +376,10 @@ h1 {
 
     &:hover {
       background: #303b55;
-
     }
+
+
+
   }
 
   &__main-upper {
@@ -455,14 +605,30 @@ h1 {
     height: 52px;
     box-shadow: 2px 1px 7px rgba(0, 0, 0, 0.08), 0px 2px 1px -1px rgba(0, 0, 0, 0.04), 0px 1px 3px rgba(0, 0, 0, 0.12);
     border-radius: 10.4px;
-
     column-gap: 20px;
+
+    @media(max-width:768px) {
+      width: 415px;
+      height: 32px;
+    }
+
+    @media(max-width:425px) {
+      width: 315px;
+    }
+
+    @media(max-width:325px) {
+      width: 215px;
+    }
   }
 
   &__separator {
     color: #DEE3EF;
     font-size: 35px;
     margin: 0 40px;
+
+    @media(max-width:325px) {
+      overflow: hidden;
+    }
   }
 
   &__number {
@@ -481,7 +647,18 @@ h1 {
     &:hover {
       color: #5876C5;
       border-bottom: 2.6px solid #5876C5;
+    }
 
+    @media(max-width:768px) {
+      font-size: 17.8px;
+    }
+
+    @media(max-width:425px) {
+      font-size: 15.8px;
+    }
+
+    @media(max-width:325px) {
+      font-size: 13.8px;
     }
   }
 
