--- a/src/styles/_openJob.scss
+++ b/src/styles/_openJob.scss
@@ -302,7 +302,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-  
+      padding: 20px 0 0 0;
       width: 402px;
       height: 408px;
       background: #2A3047;
