--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -152,5 +152,13 @@ h1 {
   iframe {
     width: 402px;
     height: 260px;
+    border-bottom-right-radius: 8px;
+    border-bottom-left-radius: 8px;
+
+    @media(max-width:554px) {
+      width: 302px;
+      height: 260px;
+    }
   }
-}
+} 
+
