--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -154,7 +154,7 @@ h1 {
     height: 260px;
     border-bottom-right-radius: 8px;
     border-bottom-left-radius: 8px;
-
+    color:#3A4562;
     @media(max-width:554px) {
       width: 302px;
       height: 260px;
