--- a/src/styles/_openJob.scss
+++ b/src/styles/_openJob.scss
@@ -1,345 +1,354 @@
 .open-job {
 
-    &__container {
-      position: relative;
-      width: 1300px;
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      column-gap: 100px;
-  
-      @media(max-width:1234px) {
-        align-items: center;
-        flex-direction: column;
-        row-gap: 50px;
-      }
-  
-    }
-  
-    &__left-block {
-      width: 700px;
-  
-      @media(max-width:786px) {
-        width: 500px;
-      }
-  
-      @media(max-width:554px) {
-        width: 300px;
-      }
-    }
-  
-    &__header {
-      display: flex;
-      border-bottom: 1px #3a45626e solid;
-      justify-content: space-between;
-  
-      @media(max-width:786px) {
-        flex-direction: column;
-        border-bottom: 0px #3a45626e solid;
-        width: 500px;
-      }
-  
-      @media(max-width:554px) {
-        width: 300px;
-      }
-    }
-  
-    &__border {
-      @media(max-width:786px) {
-        border-bottom: 1px #3a45626e solid;
-      }
-    }
-  
-    &__header-right {
-      display: flex;
+  &__container {
+    position: relative;
+    width: 1300px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    column-gap: 100px;
+
+    @media(max-width:1234px) {
       align-items: center;
-  
-      @media(max-width:786px) {
-        margin: 10px 0 0 0;
-      }
-    }
-  
-    &__header-title {
-      font-weight: 700;
-      font-size: 28px;
-      line-height: 34px;
-      letter-spacing: 0.413333px;
-      color: #3A4562;
-      margin: 0 0 10px 0;
-    }
-  
-    &__header-save {
-      cursor: pointer;
-      letter-spacing: -0.5625px;
-      color: #3A4562;
-      font-stretch: 100;
-  
-      img {
-        margin: 0 15px 0 0;
-      }
-    }
-  
-    &__header-share {
-      cursor: pointer;
-      letter-spacing: -0.5625px;
-      color: #3A4562;
-      font-stretch: 100;
-      margin: 0 0 0 24px;
-  
-      img {
-        margin: 0 15px 0 0;
-      }
-    }
-  
-    &__main {}
-  
-    &__main-button {
-      margin: 53px 0 0 0;
-      background: #384564;
-      border-radius: 8px;
-      padding: 18px 30px;
-      font-weight: 600;
-      font-size: 12px;
-      line-height: 16px;
-      text-align: center;
-      text-transform: uppercase;
-      color: #FFFFFF;
-      transition: all 0.3s ease-in-out;
-  
-      &:hover {
-        background: #303b55;
-      }
-  
-      @media(max-width:554px) {
-        margin: 13px 0 0 0;
-      }
-  
-    }
-  
-    &__main-upper {
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-  
-      @media(max-width:786px) {
-        align-items: center;
-        width: 500px;
-      }
-  
-      @media(max-width:554px) {
-        width: 300px;
-      }
-    }
-  
-    &__main-title {
-      margin: 36px 0 0 0;
-      width: 500px;
-      font-weight: 700;
-      font-size: 24px;
-      line-height: 30px;
-      letter-spacing: -0.75px;
-      color: #3A4562;
-  
-      @media(max-width:786px) {
-        max-width: 1000px;
-        font-size: 22px;
-      }
-  
-      @media(max-width:554px) {
-        margin: 13px 0 0 0;
-      }
-    }
-  
-    &__block-brutto {
-      margin: 36px 0 0 0;
-  
-      @media(max-width:786px) {
-        margin: 16px 0 10px 0;
-      }
-  
-      @media(max-width:554px) {
-        margin: 10px 0 5px 0;
-      }
-    }
-  
-    &__main-brutto {
-  
-      font-weight: 700;
-      font-size: 20px;
-      line-height: 25px;
-      letter-spacing: -0.625px;
-      color: #3A4562;
-  
-      @media(max-width:786px) {
-        font-size: 18px;
-      }
-  
-    }
-  
-    &__main-text {
-      font-weight: 400;
-      font-size: 18px;
-      line-height: 24px;
-      letter-spacing: -0.5625px;
-      color: #3A4562;
-  
-      img {
-        align-items: center;
-        margin: 6px 5px 0 0;
-      }
-  
-      @media(max-width:786px) {
-        font-size: 16px;
-      }
-    }
-  
-    &__main-post {
-      margin: 7px 0;
-      font-weight: 400;
-      font-size: 18px;
-      line-height: 24px;
-      letter-spacing: -0.5625px;
-      color: rgba(56, 65, 93, 0.355988);
-  
-      @media(max-width:786px) {
-        font-size: 16px;
-      }
-    }
-  
-    &__main-description {
-      font-weight: 400;
-      font-size: 18px;
-      line-height: 24px;
-      letter-spacing: -0.5625px;
-      color: #3A4562;
-      margin: 0 0 20px 0;
-  
-      @media(max-width:786px) {
-        font-size: 16px;
-      }
-    }
-  
-    &__main-respons {
-      font-weight: 700;
-      font-size: 20px;
-      line-height: 25px;
-      letter-spacing: -0.625px;
-      color: #3A4562;
-      margin: 0 0 10px 0;
-  
-      @media(max-width:786px) {
-        font-size: 18px;
-      }
-    }
-  
-    &__main-benefits {
-      font-weight: 700;
-      font-size: 20px;
-      line-height: 25px;
-      letter-spacing: -0.625px;
-      color: #3A4562;
-      margin: 20px 0 10px 0;
-  
-      @media(max-width:786px) {
-        font-size: 18px;
-      }
-  
-      @media(max-width:554px) {
-        margin: 10px 0 5px 0;
-      }
-    }
-  
-    &__info-type {
-      display: flex;
-      column-gap: 10px;
-    }
-  
-    &__info-title {
-      font-weight: 700;
-      font-size: 28px;
-      line-height: 34px;
-      letter-spacing: 0.413333px;
-      margin: 66px 0 9px 0;
-      color: #3A4562;
-      border-bottom: 1px #3a45628a solid;
-  
-      @media(max-width:554px) {
-        margin: 15px 0 10px 0;
-        font-size: 20px;
-      }
-  
-    }
-  
-    &__info-text {
-      margin: 15px 0 10px 0;
-      font-weight: 400;
-      font-size: 18px;
-      line-height: 24px;
-      letter-spacing: -0.5625px;
-      color: #3A4562;
-  
-      @media(max-width:786px) {
-        font-size: 16px;
-      }
-  
-    }
-  
-    &__info-benefits {
-      display: flex;
-      column-gap: 10px;
-    }
-  
-    &__info-images {
-      display: flex;
-      justify-content: center;
-      margin: 20px 0 0 0;
-      align-items: center;
-      column-gap: 20px;
-    }
-  
-    &__map {
-      display: flex;
       flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      padding: 20px 0 0 0;
-      width: 402px;
-      height: 408px;
-      background: #2A3047;
-      border-radius: 8px;
-  
-      @media(max-width:554px) {
-        width: 302px;
-        height: 308px;
-      }
+      row-gap: 50px;
     }
-  
-    &__map-up {
-      color: #E7EAF0;
-      font-weight: 400;
-      font-size: 18px;
-      line-height: 24px;
-      letter-spacing: -0.5625px;
-  
+
+  }
+
+  &__left-block {
+    width: 700px;
+
+    @media(max-width:786px) {
+      width: 500px;
     }
-  
-    &__map-addres {
-      img {
-        margin: 0 5px 0 0;
-      }
-  
-      margin: 8px 0;
-    }
-  
-    &__map-email {
-      margin: 8px 0;
-    }
-  
-    &__map-name {
-      font-weight: 700;
-      font-size: 20px;
-      line-height: 25px;
-      letter-spacing: -0.625px;
+
+    @media(max-width:554px) {
+      width: 300px;
     }
   }
-  
+
+  &__header {
+    display: flex;
+    border-bottom: 1px #3a45626e solid;
+    justify-content: space-between;
+
+    @media(max-width:786px) {
+      flex-direction: column;
+      border-bottom: 0px #3a45626e solid;
+      width: 500px;
+    }
+
+    @media(max-width:554px) {
+      width: 300px;
+    }
+  }
+
+  &__border {
+    @media(max-width:786px) {
+      border-bottom: 1px #3a45626e solid;
+    }
+  }
+
+  &__header-right {
+    display: flex;
+    align-items: center;
+
+    @media(max-width:786px) {
+      margin: 10px 0 0 0;
+    }
+  }
+
+  &__header-title {
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 34px;
+    letter-spacing: 0.413333px;
+    color: #3A4562;
+    margin: 0 0 10px 0;
+  }
+
+  &__header-save {
+    cursor: pointer;
+    letter-spacing: -0.5625px;
+    color: #3A4562;
+    font-stretch: 100;
+
+    img {
+      margin: 0 15px 0 0;
+      transition: all 0.4s ease-in-out;
+    }
+
+    img:hover {
+      transform: scale(1.1);
+    }
+  }
+
+  &__header-share {
+    cursor: pointer;
+    letter-spacing: -0.5625px;
+    color: #3A4562;
+    font-stretch: 100;
+    margin: 0 0 0 24px;
+
+    img {
+      margin: 0 15px 0 0;
+      transition: all 0.4s ease-in-out;
+    }
+
+    img:hover {
+      transform: scale(1.1);
+    }
+  }
+
+  &__main {}
+
+  &__main-button {
+    margin: 53px 0 0 0;
+    background: #384564;
+    border-radius: 8px;
+    padding: 18px 30px;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 16px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      background: #303b55;
+    }
+
+    @media(max-width:554px) {
+      margin: 13px 0 0 0;
+    }
+
+  }
+
+  &__main-upper {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+    @media(max-width:786px) {
+      align-items: center;
+      width: 500px;
+    }
+
+    @media(max-width:554px) {
+      width: 300px;
+    }
+  }
+
+  &__main-title {
+    margin: 36px 0 0 0;
+    width: 500px;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 30px;
+    letter-spacing: -0.75px;
+    color: #3A4562;
+
+    @media(max-width:786px) {
+      max-width: 1000px;
+      font-size: 22px;
+    }
+
+    @media(max-width:554px) {
+      margin: 13px 0 0 0;
+    }
+  }
+
+  &__block-brutto {
+    margin: 36px 0 0 0;
+
+    @media(max-width:786px) {
+      margin: 16px 0 10px 0;
+    }
+
+    @media(max-width:554px) {
+      margin: 10px 0 5px 0;
+    }
+  }
+
+  &__main-brutto {
+
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 25px;
+    letter-spacing: -0.625px;
+    color: #3A4562;
+
+    @media(max-width:786px) {
+      font-size: 18px;
+    }
+
+  }
+
+  &__main-text {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    letter-spacing: -0.5625px;
+    color: #3A4562;
+
+    img {
+      align-items: center;
+      margin: 6px 5px 0 0;
+    }
+
+    @media(max-width:786px) {
+      font-size: 16px;
+    }
+  }
+
+  &__main-post {
+    margin: 7px 0;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    letter-spacing: -0.5625px;
+    color: rgba(56, 65, 93, 0.355988);
+
+    @media(max-width:786px) {
+      font-size: 16px;
+    }
+  }
+
+  &__main-description {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    letter-spacing: -0.5625px;
+    color: #3A4562;
+    margin: 0 0 20px 0;
+
+    @media(max-width:786px) {
+      font-size: 16px;
+    }
+  }
+
+  &__main-respons {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 25px;
+    letter-spacing: -0.625px;
+    color: #3A4562;
+    margin: 0 0 10px 0;
+
+    @media(max-width:786px) {
+      font-size: 18px;
+    }
+  }
+
+  &__main-benefits {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 25px;
+    letter-spacing: -0.625px;
+    color: #3A4562;
+    margin: 20px 0 10px 0;
+
+    @media(max-width:786px) {
+      font-size: 18px;
+    }
+
+    @media(max-width:554px) {
+      margin: 10px 0 5px 0;
+    }
+  }
+
+  &__info-type {
+    display: flex;
+    column-gap: 10px;
+  }
+
+  &__info-title {
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 34px;
+    letter-spacing: 0.413333px;
+    margin: 66px 0 9px 0;
+    color: #3A4562;
+    border-bottom: 1px #3a45628a solid;
+
+    @media(max-width:554px) {
+      margin: 15px 0 10px 0;
+      font-size: 20px;
+    }
+
+  }
+
+  &__info-text {
+    margin: 15px 0 10px 0;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    letter-spacing: -0.5625px;
+    color: #3A4562;
+
+    @media(max-width:786px) {
+      font-size: 16px;
+    }
+
+  }
+
+  &__info-benefits {
+    display: flex;
+    column-gap: 10px;
+  }
+
+  &__info-images {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0 0 0;
+    align-items: center;
+    column-gap: 20px;
+  }
+
+  &__map {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0 0 0;
+    width: 402px;
+    height: 408px;
+    background: #2A3047;
+    border-radius: 8px;
+
+    @media(max-width:554px) {
+      width: 302px;
+      height: 308px;
+    }
+  }
+
+  &__map-up {
+    color: #E7EAF0;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    letter-spacing: -0.5625px;
+
+  }
+
+  &__map-addres {
+    img {
+      margin: 0 5px 0 0;
+    }
+
+    margin: 8px 0;
+  }
+
+  &__map-email {
+    margin: 8px 0;
+  }
+
+  &__map-name {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 25px;
+    letter-spacing: -0.625px;
+  }
+}
